--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,10 @@ categories = ["cryptography", "authentication"]
 edition = "2024"
 
 [features]
-default = ["apr1", "bcrypt", "md5", "sha1", "sha2", "unix"]
+default = ["apr1", "bcrypt", "bsdi", "md5", "sha1", "sha2", "unix"]
 apr1    = ["md5", "dep:md-5"]
 bcrypt  = ["dep:blowfish", "dep:byteorder"]
+bsdi    = []
 md5     = ["dep:md-5"]
 sha1    = ["dep:hmac", "dep:sha1"]
 sha2    = ["dep:sha2"]
